fix text statistic overlap progressbar

--- a/src/Components/SingleBarChart/SingleBarChart.module.scss
+++ b/src/Components/SingleBarChart/SingleBarChart.module.scss
@@ -2,6 +2,7 @@
 .bar {
   height: 20px;
   margin-bottom: 10px;
+  margin-right: 10px;
   -moz-box-shadow: 0 0 5px 3px #ccc;
   -webkit-box-shadow: 0 0 5px 3px #ccc;
   box-shadow: 0 0 5px 3px #ccc;
